--- a/package.json
+++ b/package.json
@@ -12,34 +12,51 @@
   "dependencies": {
     "@mdi/font": "^4.7.95",
     "core-js": "^3.4.3",
+    "file-saver": "^2.0.2",
+    "highlight.js": "^9.17.1",
+    "js-yaml": "^3.13.1",
+    "markdown-it": "^10.0.0",
+    "monaco-editor": "^0.18.1",
     "register-service-worker": "^1.6.2",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-monaco": "^1.1.0",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
+    "@types/file-saver": "^2.0.1",
+    "@types/highlight.js": "^9.12.3",
     "@types/jest": "^24.0.19",
+    "@types/js-yaml": "^3.12.1",
+    "@types/markdown-it": "0.0.9",
+    "@types/request-promise": "^4.1.45",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-e2e-cypress": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-pwa": "^4.1.0",
-    "@vue/cli-plugin-router": "^4.1.0",
-    "@vue/cli-plugin-typescript": "^4.1.0",
-    "@vue/cli-plugin-unit-jest": "^4.1.0",
-    "@vue/cli-plugin-vuex": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
+    "@vue/cli-plugin-babel": "^4.1.1",
+    "@vue/cli-plugin-e2e-cypress": "^4.1.1",
+    "@vue/cli-plugin-eslint": "^4.1.1",
+    "@vue/cli-plugin-pwa": "^4.1.1",
+    "@vue/cli-plugin-router": "^4.1.1",
+    "@vue/cli-plugin-typescript": "^4.1.1",
+    "@vue/cli-plugin-unit-jest": "^4.1.1",
+    "@vue/cli-plugin-vuex": "^4.1.1",
+    "@vue/cli-service": "^4.1.1",
     "@vue/eslint-config-airbnb": "^5.0.0",
     "@vue/eslint-config-typescript": "^5.0.1",
     "@vue/test-utils": "^1.0.0-beta.30",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.0.1",
+    "fibers": "^4.0.2",
     "lint-staged": "^9.4.3",
+    "monaco-editor-webpack-plugin": "^1.7.0",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
     "typescript": "^3.7.3",
