--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,10 @@ jobs:
       - run:
           name: Build Website in Modern Mode
           command: npm run build -- --modern
+      - persist_to_workspace:
+          root: dist
+          paths:
+            - .
   test_unit:
     docker:
       - image: circleci/node:latest
@@ -67,10 +71,55 @@ jobs:
       - run:
           name: Lint
           command: npm run lint
+  deploy_production:
+    docker:
+      - image: circleci/node:latest
+    steps:
+      - checkout
+      - run:
+          name: Update npm
+          command: 'sudo npm install -g npm@latest'
+      - attach_workspace:
+          at: dist
+      - run:
+          name: Netlify Deploy
+          command: npx netlify deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --prod --dir=dist
+  deploy_branch:
+    docker:
+      - image: circleci/node:latest
+    steps:
+      - checkout
+      - run:
+          name: Update npm
+          command: 'sudo npm install -g npm@latest'
+      - attach_workspace:
+          at: dist
+      - run:
+          name: Netlify Deploy
+          command: npx netlify deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --dir=dist
 workflows:
   version: 2
-  build:
+  master:
     jobs:
       - build
       - test_unit
       - lint
+      - deploy_production:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - master
+  branch:
+    jobs:
+      - build
+      - test_unit
+      - lint
+      - deploy_branch:
+          requires:
+            - build
+          filters:
+            branches:
+              ignore:
+                - master
