--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,8 @@ jobs:
       - run:
           name: Build Website in Modern Mode
           command: npm run build -- --modern
+      - store_artifacts:
+          path: dist
       - persist_to_workspace:
           root: dist
           paths:
@@ -83,7 +85,7 @@ jobs:
           at: dist
       - run:
           name: Netlify Deploy
-          command: npx netlify-cli deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --prod --dir=dist
+          command: npx netlify-cli deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --prod --dir=dist --message "Automatic Production Deployment - $CIRCLE_BRANCH@$(echo $CIRCLE_SHA1 | cut -c -7)"
   deploy_branch:
     docker:
       - image: circleci/node:latest
@@ -96,7 +98,7 @@ jobs:
           at: dist
       - run:
           name: Netlify Deploy
-          command: npx netlify-cli deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --dir=dist
+          command: npx netlify-cli deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --dir=dist --message "Automatic Draft Deployment - $CIRCLE_BRANCH@$(echo $CIRCLE_SHA1 | cut -c -7)"
 workflows:
   version: 2
   build:
