--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
-    "vue-monaco": "^1.1.0",
+    "vue-monaco": "git+https://github.com/egoist/vue-monaco.git",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
