--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "preinstall": "npx npm-force-resolutions"
   },
   "dependencies": {
     "@mdi/font": "^4.7.95",
@@ -23,7 +24,7 @@
     "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
-    "vue-monaco": "git+https://github.com/egoist/vue-monaco.git",
+    "vue-monaco": "^1.1.0",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
@@ -63,6 +64,9 @@
     "vue-cli-plugin-vuetify": "^2.0.2",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.3.0"
+  },
+  "resolutions": {
+    "monaco-editor": "^0.18.1"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
