Moved from request-promise to axios

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@mdi/font": "^4.7.95",
+    "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "file-saver": "^2.0.2",
     "highlight.js": "^9.17.1",
@@ -19,8 +20,6 @@
     "markdown-it": "^10.0.0",
     "monaco-editor": "^0.18.1",
     "register-service-worker": "^1.6.2",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.5",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
@@ -38,7 +37,6 @@
     "@types/jest": "^24.0.19",
     "@types/js-yaml": "^3.12.1",
     "@types/markdown-it": "0.0.9",
-    "@types/request-promise": "^4.1.45",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
     "@vue/cli-plugin-babel": "^4.1.1",
