--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint",
-    "preinstall": "npx npm-force-resolutions"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@mdi/font": "^4.7.95",
@@ -18,7 +17,7 @@
     "highlight.js": "^9.17.1",
     "js-yaml": "^3.13.1",
     "markdown-it": "^10.0.0",
-    "monaco-editor": "^0.18.1",
+    "monaco-editor": "^0.19.0",
     "register-service-worker": "^1.6.2",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
@@ -64,7 +63,7 @@
     "vuetify-loader": "^1.3.0"
   },
   "resolutions": {
-    "monaco-editor": "^0.18.1"
+    "monaco-editor": "^0.19.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
