Created Netlify Function: generate-link-preview

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+
+# Local Netlify folder
+.netlify
+
+# Compiled Netlify Function files
+functions/**/*.js
