--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "npx --max_old_space_size=4096 vue-cli-service build",
+    "build": "yarn --max_old_space_size=4096 vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "yarn --cwd ./functions"
   },
   "dependencies": {
     "@mdi/font": "^4.7.95",
@@ -63,7 +64,8 @@
     "vuetify-loader": "^1.3.0"
   },
   "resolutions": {
-    "monaco-editor": "^0.19.0"
+    "monaco-editor": "^0.19.0",
+    "@types/node": "12.12.22"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
