--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,10 @@ jobs:
       - store_artifacts:
           path: dist
       - persist_to_workspace:
-          root: dist
+          root: .
           paths:
-            - .
+            - dist
+            - functions
   test_unit:
     docker:
       - image: circleci/node:latest
@@ -76,20 +77,20 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-          at: dist
+        at: $CIRCLE_WORKING_DIRECTORY
       - run:
           name: Netlify Deploy
-          command: npx netlify-cli deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --prod --dir=dist --message "Automatic Production Deployment - $CIRCLE_BRANCH@$(echo $CIRCLE_SHA1 | cut -c -7)"
+          command: npx netlify-cli deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --prod --dir=dist --functions=functions --message "Automatic Production Deployment - $CIRCLE_BRANCH@$(echo $CIRCLE_SHA1 | cut -c -7)"
   deploy_branch:
     docker:
       - image: circleci/node:latest
     steps:
       - checkout
       - attach_workspace:
-          at: dist
+          at: $CIRCLE_WORKING_DIRECTORY
       - run:
           name: Netlify Deploy
-          command: npx netlify-cli deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --dir=dist --message "Automatic Draft Deployment - $CIRCLE_BRANCH@$(echo $CIRCLE_SHA1 | cut -c -7)"
+          command: npx netlify-cli deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --dir=dist --functions=functions --message "Automatic Draft Deployment - $CIRCLE_BRANCH@$(echo $CIRCLE_SHA1 | cut -c -7)"
 workflows:
   version: 2
   build:
