Fixed CircleCI Workspace

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:latest
+    working_directory: ~/advanced-markdown-editor
     steps:
       - checkout
       - restore_cache:
@@ -30,6 +31,7 @@ jobs:
   test_unit:
     docker:
       - image: circleci/node:latest
+    working_directory: ~/advanced-markdown-editor
     steps:
       - checkout
       - restore_cache:
@@ -54,6 +56,7 @@ jobs:
   lint:
     docker:
       - image: circleci/node:latest
+    working_directory: ~/advanced-markdown-editor
     steps:
       - checkout
       - restore_cache:
@@ -74,20 +77,22 @@ jobs:
   deploy_production:
     docker:
       - image: circleci/node:latest
+    working_directory: ~/advanced-markdown-editor
     steps:
       - checkout
       - attach_workspace:
-          at: $CIRCLE_WORKING_DIRECTORY
+          at: ~/advanced-markdown-editor
       - run:
           name: Netlify Deploy
           command: npx netlify-cli deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --prod --dir=dist --functions=functions --message "Automatic Production Deployment - $CIRCLE_BRANCH@$(echo $CIRCLE_SHA1 | cut -c -7)"
   deploy_branch:
     docker:
       - image: circleci/node:latest
+    working_directory: ~/advanced-markdown-editor
     steps:
       - checkout
       - attach_workspace:
-          at: $CIRCLE_WORKING_DIRECTORY
+          at: ~/advanced-markdown-editor
       - run:
           name: Netlify Deploy
           command: npx netlify-cli deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --dir=dist --functions=functions --message "Automatic Draft Deployment - $CIRCLE_BRANCH@$(echo $CIRCLE_SHA1 | cut -c -7)"
