--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.0.1",
     "fibers": "^4.0.2",
+    "fork-ts-checker-webpack-plugin": "^3.1.1",
     "jest-junit": "^10.0.0",
     "lint-staged": "^9.4.3",
     "monaco-editor-webpack-plugin": "^1.7.0",
