Added nohoist for Dependencies of Netlify Functions

--- a/functions/generate-link-previews/package.json
+++ b/functions/generate-link-previews/package.json
@@ -2,6 +2,16 @@
   "name": "generate-link-previews",
   "version": "0.1.0",
   "private": true,
+  "workspaces": {
+    "nohoist": [
+      "aws-lambda",
+      "aws-lambda/**",
+      "axios",
+      "axios/**",
+      "cheerio",
+      "cheerio/**"
+    ]
+  },
   "scripts": {
     "build": "tsc"
   },
