--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-yaml": "^3.13.1",
     "markdown-it": "^10.0.0",
     "monaco-editor": "^0.19.0",
+    "prettier": "1.19.1",
     "register-service-worker": "^1.6.2",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
@@ -37,6 +38,7 @@
     "@types/jest": "^24.0.19",
     "@types/js-yaml": "^3.12.1",
     "@types/markdown-it": "0.0.9",
+    "@types/prettier": "^1.19.0",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
     "@vue/cli-plugin-babel": "^4.1.1",
