--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "NODE_OPTIONS='--max-old-space-size=3584' vue-cli-service build",
+    "build": "cross-env NODE_OPTIONS='--max-old-space-size=3584' vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
@@ -53,6 +53,7 @@
     "@vue/eslint-config-airbnb": "^5.0.0",
     "@vue/eslint-config-typescript": "^5.0.1",
     "@vue/test-utils": "^1.0.0-beta.30",
+    "cross-env": "^6.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.0.1",
     "fibers": "^4.0.2",
